--- a/playbooks/lemp/templates/default.conf
+++ b/playbooks/lemp/templates/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name localhost;
-    root /usr/share/nginx/html;
+    root /var/www/html;
     index index.php index.html;
 
     # redirect server error pages to the static page /50x.html
