--- a/playbooks/lemp/vars/www_RedHat.yml
+++ b/playbooks/lemp/vars/www_RedHat.yml
@@ -5,3 +5,6 @@ nginx_vhosts:
     index: "index.php index.html index.htm"
 #    template: "{{ playbook_dir }}/templates/vhost.j2"
     template: "{{ playbook_dir }}/templates/default.conf"
+
+php_fpm_pool_user: nginx
+php_fpm_pool_group: nginx
